plugins {
    id 'java-library'
    id 'groovy'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation "org.slf4j:slf4j-api:1.7.30"
    implementation "org.slf4j:jul-to-slf4j:1.7.30"
    implementation "org.slf4j:jcl-over-slf4j:1.7.30"
    implementation "ch.qos.logback:logback-classic:1.1.11"

    testImplementation "org.apache.groovy:groovy-all:$groovyVersion"
    testImplementation "org.spockframework:spock-core:$spockVersion"
}

test {
    useJUnitPlatform()
    testLogging {
        events "PASSED", "FAILED", "SKIPPED"
    }
}